--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us</title>
 
-    <link rel="icon" href="./assets/images/about.png">
+    <link rel="icon" href="./assets/images/about.png" />
 
     <!-- Font-Awesome-CDN -->
     <link
@@ -34,7 +34,7 @@
     <link rel="stylesheet" href="./assets/css/asgard-trial-wide-style.css" />
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="stylesheet" href="./assets/css/responsive.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css" />
   </head>
   <body>
     <!-- Header-Section-Open-->
@@ -74,7 +74,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ms-5 mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="index.html"
+                  <a
+                    class="nav-link active"
+                    aria-current="page"
+                    href="index.html"
                     >Home</a
                   >
                 </li>
@@ -90,7 +93,6 @@
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">Contact Us</a>
                 </li>
-              
               </ul>
             </div>
           </div>
@@ -101,11 +103,14 @@
     <!-- Header-Section-Close-->
 
     <!-- Banner-sec Open -->
-    <section>
+    <section class="banner-sec-all">
       <div class="ban-img">
+        <img src="./assets/images/banner.png" alt="Banner Image" />
         <div class="container">
           <div class="row">
-            <div class="col-lg-12 text-center">
+            <div
+              class="col-lg-12 d-flex justify-content-center align-items-center text-center banner-content"
+            >
               <h1>ABOUT US</h1>
             </div>
           </div>
@@ -189,16 +194,15 @@
     </section>
     <!-- AboutUs-Sec-Close -->
 
- 
-     <!-- Footer-Nav-Sec-Open -->
-     <section>
+    <!-- Footer-Nav-Sec-Open -->
+    <section>
       <div class="footer_nav wrapper">
         <div class="container">
           <div class="row align-items-center">
             <div class="col-lg-3 col-md-3 text-center">
               <img src="./assets/images/mail.png" alt="" class="img-fluid" />
             </div>
-            <div class="col-lg-4 col-md-8 mt-lg-0 mt-md-0 mt-sm-5 ">
+            <div class="col-lg-4 col-md-8 mt-lg-0 mt-md-0 mt-sm-5">
               <div class="newsletter">
                 <h5>Newsletter And Get Updates</h5>
                 <p>Sign up for our newsletter to get up-to-date from us</p>
@@ -221,7 +225,6 @@
       </div>
     </section>
     <!-- Footer-Nav-Sec-Close -->
-
 
     <!-- Footer-Sec-Open -->
     <footer>
