--- a/checkout.html
+++ b/checkout.html
@@ -104,19 +104,22 @@
     </header>
     <!-- Header-Section-Close-->
 
-    <!-- Banner-sec Open -->
-    <section>
-      <div class="ban-img">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-12 text-center">
-              <h1>CHECK OUT</h1>
+      <!-- Banner-sec Open -->
+      <section class="banner-sec-all">
+        <div class="ban-img">
+          <img src="./assets/images/banner.png" alt="Banner Image" />
+          <div class="container">
+            <div class="row">
+              <div
+                class="col-lg-12 d-flex justify-content-center align-items-center text-center banner-content"
+              >
+                <h1>CHECK OUT</h1>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
-    <!-- Banner-sec Close -->
+      </section>
+      <!-- Banner-sec Close -->
 
     <!-- CheckOut-Sec-Open -->
     <section>
