--- a/products.html
+++ b/products.html
@@ -102,13 +102,15 @@
       <!-- NavBar-Sec-Close -->
     </header>
     <!-- Header-Section-Close-->
-
     <!-- Banner-sec Open -->
-    <section>
+    <section class="banner-sec-all">
       <div class="ban-img">
+        <img src="./assets/images/banner.png" alt="Banner Image" />
         <div class="container">
           <div class="row">
-            <div class="col-lg-12 text-center">
+            <div
+              class="col-lg-12 d-flex justify-content-center align-items-center text-center banner-content"
+            >
               <h1>PRODUCTS</h1>
             </div>
           </div>
